Revert "[Backport] [2.x] Restore support for Java 8 (#767) (#777)"
This reverts commit 081a17e61a4674779775bc8ab8c0b7397924c967.